--- a/main/templates/book_description.html
+++ b/main/templates/book_description.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'main.html' %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/book_description.css' %}">
+{% block title %}
+<title>Description</title>
+{% endblock %}
+{% block main %}
 
-</body>
-</html>
+{% endblock %}
