--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -1,8 +1,4 @@
 header {
-
-}
-
-.header {
     padding: 15px 30px 15px 30px;
     background: #173F5F;
     display: flex;
@@ -88,6 +84,12 @@ nav a {
     font-weight: bold;
 }
 
+nav a:hover {
+    text-decoration: underline;
+    text-underline-offset: 4px;
+    text-decoration-thickness: 1px;
+}
+
 main {
     display: flex;
     flex-direction: column;
@@ -96,6 +98,7 @@ main {
 .about {
     padding: 40px 40px 40px 40px;
     height: 730px;
+    background: white;
     display: flex;
     justify-content: space-around;
     gap: 50px;
@@ -132,6 +135,10 @@ main {
     text-align: center;
 }
 
+.about__info-statistics:hover {
+    box-shadow: 0px 12px 32px 0px rgba(0, 0, 0, 0.1), 0px 0px 2px 0px rgba(0, 0, 0, 0.06);
+}
+
 .about__info-statistics-image {
     margin: 0px 10px 0px 0px;
     height: 120px;
@@ -158,7 +165,6 @@ main {
 .popular {
     padding: 40px 250px 40px 250px;
     height: 500px;
-    background: #f2f2f2;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -183,6 +189,10 @@ main {
     border-radius: 4px;
 }
 
+.popular__container-item:hover {
+    box-shadow: 0px 12px 32px 0px rgba(0, 0, 0, 0.1), 0px 0px 2px 0px rgba(0, 0, 0, 0.06);
+}
+
 .popular__container-item-image {
     height: 300px;
     width: 210px;
@@ -203,7 +213,7 @@ main {
 
 .popular__container-item-info-rating {
     display: flex;
-    color: #173F5F;
+    color: black;
     font-size: 17px;
 }
 
@@ -220,13 +230,14 @@ main {
 
 .popular__container-item-info-readers {
     display: flex;
-    color: #173F5F;
+    color: black;
     font-size: 17px;
 }
 
 .income {
     padding: 40px 40px 40px 40px;
     height: 730px;
+    background: white;
 }
 
 .income__title {
