--- a/main/templates/book_description.html
+++ b/main/templates/book_description.html
@@ -105,7 +105,11 @@
                             <th>{{ instance.price_per_day }} р.</th>
                             <th>{{ instance.registration_date }}</th>
                             <th>
-
+                                <a href="#">
+                                    <div class="add_to_cart_button">
+                                        <img src="{% static 'img/' %}" alt="">
+                                    </div>
+                                </a>
                             </th>
                             <th>
                                 <a href="#" class="edit_button">
