--- a/main/templates/add_book.html
+++ b/main/templates/add_book.html
@@ -1,8 +1,6 @@
 {% extends 'main.html' %}
-
-{% load crispy_forms_tags %}
-
 {% load static %}
+{% load mptt_tags %}
 
 {% block stylesheet %}
     <link rel="stylesheet" href="{% static 'css/add_book.css' %}">
@@ -13,5 +11,94 @@
 {% endblock %}
 
 {% block main %}
+    <div class="main">
+        <form action="" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <input type="text" name="russian_title" placeholder="На русском языке*" required>
+            <input type="text" name="original_title" placeholder="На языке оригинала">
 
+            <input type="file" accept="image/*" name="book_photos" required>
+            <input type="file" accept="image/*" name="book_photos">
+
+            <input type="text" name="search" placeholder="Поиск автора" id="search">
+
+            {% for author in authors %}
+                <div class="author_list">
+                    <input type="checkbox" name="author_choice" value="{{ author.id }}" id="{{ author.id }}">
+                    <label for="{{ author.id }}">{{ author.first_name }} {{ author.last_name }}</label>
+                </div>
+            {% endfor %}
+
+            <div class="new_authors">
+                <div class="first_author">
+                    <div class="new_author_inputs">
+                        <input type="text" name="new_author_last_name_0" placeholder="Фамилия*">
+                        <input type="text" name="new_author_first_name_0" placeholder="Имя">
+                        <input type="text" name="new_author_patronymic_0" placeholder="Отчество">
+                    </div>
+                    <div class="new_author_photos">
+                        <input type="file" accept="image/*" name="new_author_photos_0">
+                        <input type="file" accept="image/*" name="new_author_photos_0">
+                    </div>
+                </div>
+                <div class="added_author_inputs">
+
+                </div>
+                <div class="plus">
+                    <img src="{% static 'img/plus.svg' %}" alt="">
+                </div>
+            </div>
+
+            {% recursetree genres %}
+            <div class="filter__genre-list">
+                    <div class="filter__genre-list-parent">
+                        <input
+                                type="checkbox"
+                                name="parent"
+                                value="{{ node.id }}"
+                                id="{{ node.id }}"
+                                class="filter__genre-list-parent-input"
+                        >
+                        <label for="{{ node.id }}">{{ node.name }}</label>
+                    </div>
+                    {% if not node.is_leaf_node %}
+                        <div class="filter__genre-list-children">
+                            {% for child in node.get_children %}
+                            <div class="filter__genre-list-children-child">
+                                <input
+                                        type="checkbox"
+                                        name="child"
+                                        value="{{ child.id }}"
+                                        id="{{ child.id }}"
+                                        class="filter__genre-list-children-child-input"
+                                >
+                                <label for="{{ child.id }}">{{ child.name }}</label>
+                            </div>
+                        {% endfor %}
+                        </div>
+                    {% endif %}
+            </div>
+            {% endrecursetree %}
+
+            <label for="publication_date">Год издания</label>
+            <input type="number" name="publication_date" id="publication_date" placeholder="ГГГГ" min="1900" max="3000">
+
+            <label for="page_count">Количество страниц</label>
+            <input type="number" step="1" name="page_count" id="page_count" min="1" max="5000">
+
+            <label for="price">Стоимость</label>
+            <input type="number" step="0.01" name="price" id="price" min="0.01" required>
+
+            <label for="price_per_day">Цена за день использования</label>
+            <input type="number" step="0.01" name="price_per_day" id="price_per_day" min="0.01" required>
+
+            <label for="instance_count">Количество экземпляров</label>
+            <input type="number" step="1" name="instance_count" id="instance_count" value="1" min="1" required>
+
+            <input type="submit" value="Сохранить">
+        </form>
+    </div>
+
+    <script src="{% static 'js/check_children.js' %}"></script>
+    <script src="{% static 'js/create_inputs.js' %}"></script>
 {% endblock %}
