add book instance form was added

--- a/main/static/css/add_book.css
+++ b/main/static/css/add_book.css
@@ -58,8 +58,13 @@ form input[type=submit] {
     font-weight: bold;
 }
 
-.author_list {
+.author {
     display: flex;
+}
+
+.not_found {
+    color: black;
+    font-size: 15px;
 }
 
 .new_authors {
